--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,25 @@
 @import '~bootstrap/scss/bootstrap';
 
+nav{
+    background-color: #161d20;
+    height: 70px;
+
+    .text-color-nav{
+        color: white !important;
+        &:hover{
+            color: #c90017 !important;
+        }
+    }
+
+    .drop-item{
+        &:hover{
+            color: #c90017;
+        } 
+        &:active{
+            background-color: rgba(128, 128, 128, 0.5);
+        }
+    }
+}
 
 main {
     height: calc(100vh - 70px);
@@ -9,10 +29,14 @@ main {
         min-width: 200px;
         height: 100%;
         background-color: #161d20;
+        border-top: 1px solid #c90017;
 
         li {
             margin-bottom: 10px;
-
+            
+            .activeRoute{
+                color: #c90017;
+            }
 
             .asideMenuLink {
                 i {
