--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -72,7 +72,7 @@ main {
                     font-size: 20px;
                     padding-right: 10px;
                     // margin-left: 20px;
-                    color: rgb(27, 107, 182);
+                    color: #c90017;
                 }
             }
         }
