[Fix] Aggiunte piccole modifiche estetiche

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -42,7 +42,7 @@ main {
             margin-bottom: 10px;
             
             .activeRoute{
-                color: #c90017;
+                color: #c90017 !important;
             }
 
             .asideMenuLink {
